--- a/index.html
+++ b/index.html
@@ -77,29 +77,36 @@
     </main>
 
     <div class="container-fluid container-total-languages">
-        <div class="row mb-9">
-            <div class="col-12">
-                <div class="total-languages text-appearance mb-5">
-                    Read Stories in Over 20 languages
-                </div>
-                <div class="total-languages-subtext text-appearance">
-                    Our stories are written in dozens of regional dialects
+        <div class="row">
+
+            <div class="col-md-6 col-lg-6 col-12">
+                <div class="img-phone">
+                    <img src="assets/img/iphone.png" />
                 </div>
             </div>
-        </div>
-
-        <div class="row">
             <div class="col-md-6 col-lg-6 col-12">
-                <p class="text-appearance-normal">
-                    Read and listen to stories in dozens of languages. Each story is written in four different levels, beginner, intermediate, advance and native. When you change the level, the vocabulary in the story changes.
-                </p>
-
-                <p class="text-appearance-normal">
-                    Each story is also written in dozen of regional variations. When you change the region, the vocabulary, expressions and the audio will change to match the selected region!
-                </p>
-                <select class="form-select">
-                    <option>Cambodia</option>
-                    <option>Chinese</option>
+                <div class="row mb-9">
+                    <div class="col-12">
+                        <div class="total-languages mb-2">
+                            Read Stories in Over 20 languages
+                        </div>
+                        <!-- <div class="total-languages-subtext">
+                            Our stories are written in dozens of regional dialects
+                        </div> -->
+                    </div>
+                </div>
+                
+                <ul>
+                    <li class="text-appearance-normal">
+                        Read stories in 4 different levels, beginner, intermediate, advance and native. When you change the level, the vocabulary in the story changes.
+                    </li>
+                    <li class="text-appearance-normal">
+                        Each story is also written in dozen of regional variations. When you change the region, the vocabulary, expressions and the audio will change to match the selected region!
+                    </li>
+                </ul>
+                <select class="form-select language-dialects-options">
+                    <option value="Cambodia">Cambodia</option>
+                    <option selected>Chinese</option>
                     <option>Cantonese</option>
                     <option>Indonesian</option>
                     <option>Japanese</option>
@@ -110,10 +117,10 @@
                     <option>Thai</option>
                     <option>Vietnam</option>
                 </select>
-            </div>
-            <div class="col-md-6 col-lg-6 col-12">
-                <div class="img-phone">
-                    <img src="assets/img/iphone.png" />
+                <div id="row">
+                    <div class="col-12">
+                        <ul id="language-dialects-selected"></ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -195,5 +202,6 @@
             </div>
         </div> -->
     </div>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
