--- a/i.html
+++ b/i.html
@@ -36,7 +36,7 @@
 
         <div class="row mb-9 section-intro">
             <div class="col-12 col-md-5 col-lg-5">
-                <div class="section-intro-caption text-appearance mb-5">
+                <div class="section-intro-caption text-appearance primary mb-5">
                     Learn a new language through captivating stories
                 </div>
                 <div class="section-intro-description mb-5">
