changed background picture

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </div>
             <div class="col-12 col-md-4 col-lg-4" style="display:flex">
                 <ul class="menu">
-                    <li class="menu-item">Languages</li>
-                    <li class="menu-item">About</li>
-                    <li class="menu-item">Stories</li>
-                    <li class="menu-item">Price</li>
+                    <li class="menu-item"><a href="#languages">Languages</a></li>
+                    <li class="menu-item"><a href="#languages">Level</a></li>
+                    <li class="menu-item"><a href="#languages">Stories</a></li>
+                    <li class="menu-item"><a href="#languages">Price</a></li>
                     <li class="menu-item">
                         <button class="button button-primary">Login</button>
                     </li>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="row d-flex justify-content-center list-of-languages">
-            <div class="col-md-3 col-lg-3">
+            <div class="col-md-2 col-lg-2">
                 <ul class="language-list">
                     <li>Arabic</li>
                     <li class="language-list-sub">
@@ -107,7 +107,7 @@
                     <li class="language-list-sub">Chinese (Cantonese)</li>
                 </ul>
             </div>
-            <div class="col-md-3 col-lg-3">
+            <div class="col-md-2 col-lg-2">
                 <ul class="language-list">
                     <li class="language-list-sub">Dutch</li>
                     <li>
@@ -137,7 +137,7 @@
                     <li class="language-list-sub">Korean</li>
                 </ul>
             </div>
-            <div class="col-md-3 col-lg-3">
+            <div class="col-md-2 col-lg-2">
                 <ul class="language-list">
                     <li class="language-list-sub">Spanish</li>
                     <li class="language-list-sub">
@@ -161,7 +161,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-3 col-lg-3">
+            <div class="col-md-2 col-lg-2">
                 <ul class="language-list">
                     <li>Indonesia</li>
                     <li>
@@ -224,10 +224,10 @@
                             </ul>
                         </li>
                         <li class="stories-level-benefits mb-3">
-                            Each story is written using regional Change story by region
+                            Each story is written using regional expressions
                         </li>
                         <li class="stories-level-benefits mb-3">
-                            Add new words to vocab bank
+                            Convert stories to learning paths
                         </li>
                     </ul>
                     
