--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/style/main.css" />
 </head>
 <body>
-    <main class="container">
+    <div class="container">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <div class="navbar-brand">
@@ -53,6 +53,10 @@
                 </div>
             </div>
         </nav>
+    </div>
+
+    <div class="container mb-9">
+        
         <!-- <div class="row">
             <div class="col-12 col-md-6 col-lg-6">
                 <header class="section-header">
@@ -75,8 +79,8 @@
             </div>
         </div> -->
 
-        <div class="row section-intro">
-            <div class="col-12 col-md-6 col-lg-6">
+        <div class="row section-intr">
+            <div class="col-md-6 col-lg-6">
                 <div class="section-intro-caption mb-5">
                     Learn a new language through <span style="color:#e07258;text-decoration:underline;">captivating</span> stories
                 </div>
@@ -109,122 +113,124 @@
                     </div>
                 </div>
             </div> -->
-            <div class="col-12 col-md-6 col-lg-6">
+            <div class="col-md-6 col-lg-6">
                 <div class="section-intro-img">
                     <img src="assets/img/linguastories.png" />
                 </div>
             </div>
         </div>
-    </main>
+    </div>
 
-    <div class="container-fluid total-languages-container">
-        <div class="total-languages mb-2">
-            Stories in Over 20 languages
-        </div>
-        <div class="total-languages-subtext mb-6">
-            Read & listen to stories in regional accents & dialects
-        </div>
+    <div class="row total-languages-container">
+        <div class="col-12">
+            <div class="total-languages mb-2">
+                Stories in Over 20 languages
+            </div>
+            <div class="total-languages-subtext mb-6">
+                Read & listen to stories in regional accents & dialects
+            </div>
 
-        <div class="row d-flex justify-content-center list-of-languages">
-            <div class="col-md-2 col-lg-2">
-                <ul class="language-list">
-                    <li>Arabic</li>
-                    <li class="language-list-sub">
-                        <ul class="language-sublist">
-                            <li>Egypt</li>
-                            <li>Standard</li>
-                        </ul>
-                    </li>
-                    <li>Cambodia</li>
-                    <li>Chinese (Mandarin)</li>
-                    <li class="language-list-sub">
-                        <ul class="language-sublist">
-                            <li>Beijing</li>
-                            <li>Guangzhou</li>
-                            <li>Nanjing</li>
-                            <li>Shanghai</li>
-                            <li>Sichuan</li>
-                            <li>Singapore</li>
-                            <li>Taiwan</li>
-                        </ul>
-                    </li>
-                    <li class="language-list-sub">Chinese (Cantonese)</li>
-                </ul>
-            </div>
-            <div class="col-md-2 col-lg-2">
-                <ul class="language-list">
-                    <li class="language-list-sub">Dutch</li>
-                    <li>
-                        <ul class="language-sublist">
-                            <li>Belgium</li>
-                            <li>Holland</li>
-                        </ul>
-                    </li>
-                    <li class="language-list-sub">French</li>
-                    <li>
-                        <ul class="language-sublist">
-                            <li>Haiti</li>
-                            <li>Morocco</li>
-                            <li>Paris</li>
-                            <li>Quebec</li>
-                        </ul>
-                    </li>
-                    <li class="language-list-sub">German</li>
-                    <li class="language-list-sub">Japanese</li>
-                    <li>
-                        <ul>
-                            <li>Tokyo</li>
-                            <li>Osaka</li>
-                        </ul>
-                    </li>
-                    <li class="language-list-sub">Korean</li>
-                </ul>
-            </div>
-            <div class="col-md-2 col-lg-2">
-                <ul class="language-list">
-                    <li class="language-list-sub">Spanish</li>
-                    <li class="language-list-sub">
-                        <ul class="language-sublist">
-                            <li>Argentina</li>
-                            <li>Costa Rica</li>
-                            <li>Cuba</li>
-                            <li>Dominican Republic</li>
-                            <li>El Salvador</li>
-                            <li>Mexico</li>
-                            <li>Peru</li>
-                            <li>Spain</li>
-                        </ul>
-                    </li>
-                    <li>Portuguese</li>
-                    <li>
-                        <ul class="language-sublist">
-                            <li>Portugal</li>
-                            <li>Brazil</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-md-2 col-lg-2">
-                <ul class="language-list">
-                    <li>Indonesia</li>
-                    <li>
-                        <ul class="language-sublist">
-                            <li>Jakarta</li>
-                            <li>Kalimantan</li>
-                            <li>Sulawesi</li>
-                        </ul>
-                    </li>
-                    <li>Malay</li>
-                    <li>Tagalog</li>
-                    <li>Thai</li>
-                    <li>Vietnam</li>
-                        <li>
+            <div class="row d-flex justify-content-center list-of-languages">
+                <div class="col-md-2 col-lg-2">
+                    <ul class="language-list">
+                        <li>Arabic</li>
+                        <li class="language-list-sub">
                             <ul class="language-sublist">
-                                <li>Phan Thiet</li>
-                                <li>Ho Chi</li>
+                                <li>Egypt</li>
+                                <li>Standard</li>
                             </ul>
                         </li>
-                </ul>
+                        <li>Cambodia</li>
+                        <li>Chinese (Mandarin)</li>
+                        <li class="language-list-sub">
+                            <ul class="language-sublist">
+                                <li>Beijing</li>
+                                <li>Guangzhou</li>
+                                <li>Nanjing</li>
+                                <li>Shanghai</li>
+                                <li>Sichuan</li>
+                                <li>Singapore</li>
+                                <li>Taiwan</li>
+                            </ul>
+                        </li>
+                        <li class="language-list-sub">Chinese (Cantonese)</li>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-lg-2">
+                    <ul class="language-list">
+                        <li class="language-list-sub">Dutch</li>
+                        <li>
+                            <ul class="language-sublist">
+                                <li>Belgium</li>
+                                <li>Holland</li>
+                            </ul>
+                        </li>
+                        <li class="language-list-sub">French</li>
+                        <li>
+                            <ul class="language-sublist">
+                                <li>Haiti</li>
+                                <li>Morocco</li>
+                                <li>Paris</li>
+                                <li>Quebec</li>
+                            </ul>
+                        </li>
+                        <li class="language-list-sub">German</li>
+                        <li class="language-list-sub">Japanese</li>
+                        <li>
+                            <ul>
+                                <li>Tokyo</li>
+                                <li>Osaka</li>
+                            </ul>
+                        </li>
+                        <li class="language-list-sub">Korean</li>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-lg-2">
+                    <ul class="language-list">
+                        <li class="language-list-sub">Spanish</li>
+                        <li class="language-list-sub">
+                            <ul class="language-sublist">
+                                <li>Argentina</li>
+                                <li>Costa Rica</li>
+                                <li>Cuba</li>
+                                <li>Dominican Republic</li>
+                                <li>El Salvador</li>
+                                <li>Mexico</li>
+                                <li>Peru</li>
+                                <li>Spain</li>
+                            </ul>
+                        </li>
+                        <li>Portuguese</li>
+                        <li>
+                            <ul class="language-sublist">
+                                <li>Portugal</li>
+                                <li>Brazil</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-2 col-lg-2">
+                    <ul class="language-list">
+                        <li>Indonesia</li>
+                        <li>
+                            <ul class="language-sublist">
+                                <li>Jakarta</li>
+                                <li>Kalimantan</li>
+                                <li>Sulawesi</li>
+                            </ul>
+                        </li>
+                        <li>Malay</li>
+                        <li>Tagalog</li>
+                        <li>Thai</li>
+                        <li>Vietnam</li>
+                            <li>
+                                <ul class="language-sublist">
+                                    <li>Phan Thiet</li>
+                                    <li>Ho Chi</li>
+                                </ul>
+                            </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
@@ -276,10 +282,10 @@
                     
                     <ul>
                         <li class="stories-level-benefits mb-3">
-                            Read stories base on your level
+                            Read stories base on your level & interest
                         </li>
                         <li class="stories-level-benefits mb-3">
-                            Each story is written in 4 different levels
+                            Read each story in 4 different levels
                             <ul>
                                 <li>Beginner</li>
                                 <li>Intermediate</li>
@@ -288,7 +294,7 @@
                             </ul>
                         </li>
                         <li class="stories-level-benefits mb-3">
-                            Each story is written using regional expressions
+                            Read & listen to each story in different regional accents
                         </li>
                         <li class="stories-level-benefits mb-3">
                             Convert stories to learning paths
