--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="row section-intr">
             <div class="col-md-6 col-lg-6">
                 <div class="section-intro-caption mb-5">
-                    Learn a new language through <span style="color:#e07258;text-decoration:underline;">captivating</span> stories
+                    Learn a new language through <span style="color:#e07258;text-decoration:underline;">captivating</span> stories in a structured environment
                 </div>
                 <div class="section-intro-description mb-5">
                     LinguaStories helps you learn a foreign language through short and engaging stories. Start your language learning journey today!
@@ -133,15 +133,15 @@
             <div class="row d-flex justify-content-center list-of-languages">
                 <div class="col-md-2 col-lg-2">
                     <ul class="language-list">
-                        <li>Arabic</li>
+                        <li class="language-list-parent">Arabic</li>
                         <li class="language-list-sub">
                             <ul class="language-sublist">
                                 <li>Egypt</li>
                                 <li>Standard</li>
                             </ul>
                         </li>
-                        <li>Cambodia</li>
-                        <li>Chinese (Mandarin)</li>
+                        <li class="language-list-parent">Cambodia</li>
+                        <li class="language-list-parent">Chinese (Mandarin)</li>
                         <li class="language-list-sub">
                             <ul class="language-sublist">
                                 <li>Beijing</li>
@@ -153,19 +153,19 @@
                                 <li>Taiwan</li>
                             </ul>
                         </li>
-                        <li class="language-list-sub">Chinese (Cantonese)</li>
+                        <li class="language-list-parent">Chinese (Cantonese)</li>
                     </ul>
                 </div>
                 <div class="col-md-2 col-lg-2">
                     <ul class="language-list">
-                        <li class="language-list-sub">Dutch</li>
+                        <li class="language-list-parent">Dutch</li>
                         <li>
                             <ul class="language-sublist">
                                 <li>Belgium</li>
                                 <li>Holland</li>
                             </ul>
                         </li>
-                        <li class="language-list-sub">French</li>
+                        <li class="language-list-parent">French</li>
                         <li>
                             <ul class="language-sublist">
                                 <li>Haiti</li>
@@ -174,20 +174,20 @@
                                 <li>Quebec</li>
                             </ul>
                         </li>
-                        <li class="language-list-sub">German</li>
-                        <li class="language-list-sub">Japanese</li>
+                        <li class="language-list-parent">German</li>
+                        <li class="language-list-parent">Japanese</li>
                         <li>
                             <ul>
                                 <li>Tokyo</li>
                                 <li>Osaka</li>
                             </ul>
                         </li>
-                        <li class="language-list-sub">Korean</li>
+                        <li class="language-list-parent">Korean</li>
                     </ul>
                 </div>
                 <div class="col-md-2 col-lg-2">
                     <ul class="language-list">
-                        <li class="language-list-sub">Spanish</li>
+                        <li class="language-list-parent">Spanish</li>
                         <li class="language-list-sub">
                             <ul class="language-sublist">
                                 <li>Argentina</li>
@@ -200,7 +200,7 @@
                                 <li>Spain</li>
                             </ul>
                         </li>
-                        <li>Portuguese</li>
+                        <li class="language-list-parent">Portuguese</li>
                         <li>
                             <ul class="language-sublist">
                                 <li>Portugal</li>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-md-2 col-lg-2">
                     <ul class="language-list">
-                        <li>Indonesia</li>
+                        <li class="language-list-parent">Indonesia</li>
                         <li>
                             <ul class="language-sublist">
                                 <li>Jakarta</li>
@@ -219,10 +219,10 @@
                                 <li>Sulawesi</li>
                             </ul>
                         </li>
-                        <li>Malay</li>
-                        <li>Tagalog</li>
-                        <li>Thai</li>
-                        <li>Vietnam</li>
+                        <li class="language-list-parent">Malay</li>
+                        <li class="language-list-parent">Tagalog</li>
+                        <li class="language-list-parent">Thai</li>
+                        <li class="language-list-parent">Vietnam</li>
                             <li>
                                 <ul class="language-sublist">
                                     <li>Phan Thiet</li>
@@ -261,21 +261,15 @@
             <div class="row">
 
                 <div class="col-md-7 col-lg-7 col-12">
-                    <div class="background-box-container">
-                        <div class="background-box-svg">
-                            <svg class="absolute -mr-3 top-8 right-1/2 lg:m-0 lg:left-0" width="404" height="392" fill="none" viewBox="0 0 404 392"><defs><pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse"><rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor"></rect></pattern></defs><rect width="404" height="392" fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"></rect></svg>
-                        </div>
-                        <div class="background-box"></div>
-                        <div class="img-phone">
-                            <img src="assets/img/iphone.png" />
-                        </div>
+                    <div class="img-phone">
+                        <img src="assets/img/people.png" />
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-12 stories-level-right">
                     <div class="row mb-7">
                         <div class="col-12">
                             <div class="stories-level-caption mb-2">
-                                Personalize Stories
+                                Adapt Stories to Your Level and Region                                
                             </div>
                         </div>
                     </div>
@@ -307,11 +301,39 @@
     </div>
     
 
-    <div class="container-fluid topics-container">
-        <div class="topics-title">
-            Stories about 200 topics
+    <section class="container-fluid my-5">
+        <h2>Our Library is a Treasure Trove of Stories!</h2>
+        <h4>Stories about 200 topics</h4>
+        <div class="row">
+            <div class="col-md-3 text-center story-list">
+                <img src="assets/img/Xiaoli.png" alt="English Story" class="img-fluid">
+                <p>XiaoLi Crazy's Day</p>
+            </div>
+            <div class="col-md-3 text-center story-list">
+                <img src="assets/img/chinese.png" alt="Spanish Story" class="img-fluid">
+                <p>Jun Jun Travels the World</p>
+            </div>
+            <div class="col-md-3 text-center story-list">
+                <img src="assets/img/endofworld.png" alt="Chinese Story" class="img-fluid">
+                <p>The End of Time</p>
+            </div>
+            <div class="col-md-3 text-center story-list">
+                <img src="assets/img/cars.png" alt="French Story" class="img-fluid">
+                <p>Test of Speed</p>
+            </div>
         </div>
-    </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="container-fluid bg-dark text-white text-center py-4">
+        <p>Visit us Below</p>
+        <div>
+            <a href="#"><img src="facebook-icon.png" alt="YouTube"></a>
+            <a href="#"><img src="twitter-icon.png" alt="LinkedIn"></a>
+            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+        </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="assets/js/app.js"></script>
 </body>
