--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		<title>Lingua Stories</title>
 							
 		<!-- FAVICON AND TOUCH ICONS -->
-		<link rel="shortcut icon" href="/assets/templates/images/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/assets/templates/images/favicon.ico" type="image/x-icon">
-		<link rel="apple-touch-icon" sizes="152x152" href="/assets/templates/images/apple-touch-icon-152x152.png">
+		<link rel="shortcut icon" type="image/x-icon" href="/assets/img/linguastories.png">
+		<link rel="icon" type="image/x-icon" href="/assets/img/linguastories.png">
+		<!-- <link rel="apple-touch-icon" sizes="152x152" href="/assets/templates/images/apple-touch-icon-152x152.png">
 		<link rel="apple-touch-icon" sizes="120x120" href="/assets/templates/images/apple-touch-icon-120x120.png">
 		<link rel="apple-touch-icon" sizes="76x76" href="/assets/templates/images/apple-touch-icon-76x76.png">
 		<link rel="apple-touch-icon" href="/assets/templates/images/apple-touch-icon.png">
-		<link rel="icon" href="/assets/templates/images/apple-touch-icon.png" type="image/x-icon">
+		<link rel="icon" href="/assets/templates/images/apple-touch-icon.png" type="image/x-icon"> -->
 
 		<!-- GOOGLE FONTS -->
 		<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet">
